--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.5.6",
+    "ansi-colors": "^4.1.1",
+    "blessed": "^0.1.81",
     "discord-emoji-converter": "^1.0.0",
     "discord.js": "^13.0.1",
     "ffmpeg": "0.0.4",
@@ -27,7 +29,7 @@
     "rethinkdb": "^2.4.2",
     "seedrandom": "^3.0.5",
     "yt-search": "^2.4.1",
-    "ytdl-core": "^4.9.1",
+    "ytdl-core": "^4.10.1",
     "ytpl": "^2.0.5"
   }
 }
