--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ansi-colors": "^4.1.1",
     "discord-emoji-converter": "^1.0.0",
     "discord.js": "^13.6.0",
+    "express": "^4.18.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -27,6 +28,7 @@
     "request": "^2.88.2",
     "rethinkdb": "^2.4.2",
     "seedrandom": "^3.0.5",
+    "socket.io": "^4.5.1",
     "yt-search": "^2.4.1",
     "ytdl-core": "^4.11.0",
     "ytpl": "^2.0.5"
